--- a/WidgetTemplate/Widget1.xaml
+++ b/WidgetTemplate/Widget1.xaml
@@ -1,8 +1,8 @@
 ﻿<Page
-    x:Class="WidgetTemplate.Widget1"
+    x:Class="MusicController.Widget1"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:WidgetTemplate"
+    xmlns:local="using:MusicController"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
